modules/gdscript/tests/scripts/analyzer/errors/onready_within_non_node.gd
extends RefCounted

@onready var nope := 0

func test():
	print("Cannot use @onready without a Node base")
